# Tetris

./: CMakeLists.txt  README.md
purple/include/render/: render.h
purple/src/widget/: random_util.cpp
sandbox/: application.cpp  application.h  common.h  gamepad.cpp  gamepad.h  scene_game.cpp  scene_game.h  scene_splash.cpp  scene_splash.h  tetris.cpp  tetris.h
sandbox/panel/: panel_main.cpp  panel_main.h  panel_next.cpp  panel_next.h  panel_score.cpp  panel_score.h
sandbox/scene/: scene_game.cpp  scene_game.h  scene_splash.cpp  scene_splash.h
sandbox/shape/: ishape.cpp  ishape.h  jshape.cpp  jshape.h  lshape.cpp  lshape.h  oshape.cpp  oshape.h  shape.cpp  shape.h  sshape.cpp  sshape.h  tshape.cpp  tshape.h  zshape.cpp  zshape.h
sandbox_android/app/src/main/cpp/: AndroidApplication.cpp  CMakeLists.txt
sandbox_android/app/src/main/java/panyi/xyz/textrender/: MainActivity.java
